# agentdb

./: .gitignore  Cargo.toml  agentdb.sln
agentdb-admin/: Cargo.toml
agentdb-admin-ui/: AgentDB Admin UI.csproj  BlobViewTab.Designer.cs  BlobViewTab.cs  ConnectionTab.Designer.cs  ConnectionTab.cs  ConnectionTab.resx  Generated.cs  MainForm.Designer.cs  MainForm.cs  MainForm.resx  Program.cs  RootViewTab.Designer.cs  RootViewTab.cs  RootViewTab.resx  Settings.cs  Utils.cs
agentdb-admin-ui/Modals/: GuidModal.cs  GuidModal.resx  RepartitionModal.Designer.cs  RepartitionModal.cs
agentdb-admin-ui/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
agentdb-admin-ui/ViewTabs/: AgentListViewTab.Designer.cs  AgentListViewTab.cs  AgentListViewTab.resx  BlobViewTab.cs  DirectoryViewTab.Designer.cs  DirectoryViewTab.cs  DirectoryViewTab.resx  IViewTab.cs  RootViewTab.Designer.cs  RootViewTab.cs  RootViewTab.resx
agentdb-admin/src/: lib.rs
agentdb-agents/: Cargo.toml
agentdb-agents/examples/: index.rs  retry.rs
agentdb-agents/src/: data_models.rs  effects.rs  lib.rs  proxies.rs  rpc.rs
agentdb-agents/src/data_models/: agent_index.rs
agentdb-agents/src/effects/: callback.rs  retry.rs
agentdb-agents/src/proxies/: snapshot.rs
agentdb-core/: Cargo.toml
agentdb-core/examples/: smoke.rs
agentdb-core/src/: admin.rs  blob.rs  cancellation.rs  client.rs  directories.rs  error.rs  id.rs  lib.rs  message.rs  partition.rs  prepacked.rs  subspace.rs  typed_subspace.rs  utils.rs
agentdb-macros/: Cargo.toml
agentdb-macros/src/: example.rs  lib.rs
agentdb-system/: Cargo.toml
agentdb-system/examples/: smoke.rs
agentdb-system/src/: agent.rs  agent_ref.rs  constructor.rs  context.rs  destructor.rs  dynamic_handler.rs  handler.rs  lib.rs  macros.rs  message.rs  root.rs  serializer.rs  system.rs  test.rs  utils.rs
examples/: smoke.rs
src/: blob.rs  lib.rs  subspace.rs
