[package]
name = "agentdb"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foundationdb = { version = "0.5.0", features = ["embedded-fdb-include"] }
tokio = { version = "1.11.0", features = ["full"] }
anyhow = "1.0.43"
futures = "0.3.17"
uuid = { version = "0.8.2", features = ["v4", "serde"] }
tupleops = { version = "0.1.1", features = ["concat"] }
byteorder = "1.4.3"
chrono = "0.4.19"
log = "0.4.14"
serde = "1.0.130"
postcard = { version = "0.7.2", features = ["use-std"] }
