[package]
name = "agentdb-agents"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agentdb-system = { path = "../agentdb-system" }
rand = { version = "0.8.4", features = ["std", "std_rng"] }
serde = { version = "1.0.130", features = ["rc"] }
typetag = "0.1.7"
uuid = "0.8.2"
inventory = "0.1.10"
foundationdb = { git = "https://github.com/Diggsey/foundationdb-rs.git", branch = "agentdb-fork", features = [
    "embedded-fdb-include",
] }
futures = "0.3.10"

[dev-dependencies]
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
tokio = { version = "1.12.0", features = ["full"] }
