[package]
name = "agentdb-core"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foundationdb = { git = "https://github.com/Diggsey/foundationdb-rs.git", branch = "agentdb-fork", features = [
    "embedded-fdb-include",
    "uuid",
    "num-bigint",
] }
tokio = { version = "1.11.0", features = ["full"] }
anyhow = { version = "1.0.43", features = ["backtrace"] }
futures = "0.3.17"
uuid = { version = "0.8.2", features = ["v1", "v4", "serde"] }
byteorder = "1.4.3"
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.14"
serde = "1.0.130"
postcard = { version = "0.7.2", features = ["use-std"] }
thiserror = "1.0.29"
hostname = "0.3.1"
parking_lot = "0.11.2"
rand = "0.8.4"
lazy_static = "1.4.0"

[dev-dependencies]
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
