[package]
name = "agentdb-system"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agentdb-core = { path = "../agentdb-core" }
uuid = "0.8.2"
serde = "1.0.130"
typetag = "0.1.7"
foundationdb = { version = "0.5.0", features = ["embedded-fdb-include"] }
serde_json = "1.0.68"
inventory = "0.1.10"
chrono = "0.4.19"
mopa = "0.2.2"
anyhow = "1.0.44"
async-trait = "0.1.51"
futures = "0.3.17"
anymap2 = "0.13.0"
lazy_static = "1.4.0"
postcard = { version = "0.7.2", features = ["use-std"] }
log = "0.4.14"
